--- a/main.html
+++ b/main.html
@@ -7,6 +7,14 @@
 </head>
 
 <body>
+	<nav id="nav-bar">
+      <ul id="list">
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact Us</li>
+        <li>Itinerary</li>
+      </ul>
+    </nav>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
