--- a/main.html
+++ b/main.html
@@ -7,11 +7,13 @@
 </head>
 
 <body>
-	<nav id="container">
+	<nav id="nav-bar">
+		<ul>
         <li>Home</li>
         <li>About</li>
         <li>Contact Us</li>
         <li>Itinerary</li>
+		</ul>
     </nav>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
